--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 # newline ending every file; no trailing space
 [*]
 insert_final_newline = true
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 
 # Matches multiple files with brace expansion notation
 # Set default charset
